Change: LicenseUpdater uses DownloadManager
…instead of Java builtins, so user-configured proxy is used implicitly